@@ -40,6 +40,9 @@ Features and improvements:
   interest. This change is transparent when `scorep` or a
   Score-P wrapper is used, but manifests in the changed output of
   `scorep-config --libs` and `--ldflags`.
+- Regions that run on any offloading device (aka "kernels") are now
+  classified as such with a new region role provided by OTF2 and "kernel"
+  in the Cube call-path profile.
 
 User tools and API improvements and changes:
 
